<resources>
    <string name="app_name">MyApp</string>
    <string name="nav_home">Home</string>
    <string name="nav_task">Tasks</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="title_activity_scrolling">Scrolling Activity</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Hi Kush,</string>
    <string name="my_tasks">My Tasks</string>
    <string name="recent_projects">Recent Projects</string>
    <string name="new_task">+ New Task</string>
    <string name="tasks_completed">Tasks Completed\n21</string>
    <string name="pending_tasks">Pending Tasks\n15</string>
    <string name="proj_itp">Y2S2 ITP Project</string>
    <string name="proj_research">Research</string>
    <string name="proj_corehr">CoreHr Project</string>
    <string name="collab_itp">You, Brina, Amila, Monadi...</string>
    <string name="collab_research">You, Ann, Amaya, Jack...</string>
    <string name="collab_corehr">You, Britney, Dilan, Nimra...</string>
    <string name="desc_app_logo">App Logo</string>
    <string name="desc_notification1">Notification 1</string>
    <string name="desc_notification2">Notification 2</string>
    <string name="date">August, 27</string>
    <string name="time1">6.00 am</string>
    <string name="time2">7.00 am</string>
    <string name="time3">8.00 am</string>
    <string name="time4">9.00 am</string>
    <string name="time5">10.00 am</string>
    <string name="time6">11.00 am</string>
    <string name="time7">12.00 pm</string>
    <string name="time8">13.00 pm</string>
    <string name="time9">14.00 pm</string>
    <string name="time10">15.00 pm</string>
    <string name="time11">16.00 pm</string>
    <string name="time12">17.00 pm</string>
    <string name="enter_task">Enter your task</string>
    <string name="StayConnectiveStayProductive">Stay Connective.Stay Productive</string>
    <string name="Staynsyncwithyourteammatesandnevermissadeadline">Stay in sync with your teammates and never miss a deadline.</string>
    <string name="nextbtn">next</string>
    <string name="cretenewtask">Create new Task</string>
    <string name="Deadline">Deadline</string>
    <string name="IndividualTask">Individual Task</string>
    <string name="GroupTask">Group Task</string>
    <string name="CreateTask">Create Task</string>
    <string name="Getstarted">Get Started</string>
    <string name="TodayTasks">Today\'s Tasks</string>
    <string name="My_Profile">My Profile</string>
    <string name="Hi_Kush">Hi Kush</string>
    <string name="Kush_Sandamila">Kush Sandamila</string>
    <string name="Kushgmail">Kush@gmail.com</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Streak">Streak Task Tracker</string>
    <string name="streak">12\n</string>
    <string name="Progress">Progress Rate: 95%</string>
    <string name="QuickActions">Quick Actions</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="Login">"                  Login"</string>
    <string name="EnteryourEmail">Enter your Email</string>
    <string name="EnteryourPassword">Enter your Password</string>
    <string name="Login1">Login</string>
    <string name="Createnewaccount">Create new account? Sign up</string>


</resources>
