<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    tools:context=".login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="392dp"
        android:layout_height="564dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rectangle_shape"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
        android:id="@+id/imageView14"
        android:layout_width="150dp"
        android:layout_height="201dp"
        android:layout_gravity="center|left"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logo1" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center|left"
            android:text="@string/Login"
            android:textColor="#FFFDFD"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/EnteryourEmail"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#FBFAFA"
            android:textColorHint="#AAAAAA"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/EnteryourPassword"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#FDFBFB"
            android:textColorHint="#AAAAAA"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#BC52CE"
            android:text="Login" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/navyblue"
            android:text="@string/Createnewaccount"
            android:textColor="#9B8A8A"
            android:textColorLink="@color/navyblue"
            android:textStyle="normal" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="396dp"
        android:layout_height="136dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/bgl" />
</androidx.constraintlayout.widget.ConstraintLayout>